--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/home.css" />
   </head>
   <body>
-    Welcome !!
+    <div id="player-data">
+      <h3></h3>
+    </div>
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/home.js"></script>
   </body>
