Implement map view with minimap module

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <link rel="stylesheet" type="text/css" href="/static/css/home.css" />
   </head>
   <body>
+    <div id="map">
+
+    </div>
+    <div id="minimap">
+
+    </div>
     <div id="player-data">
       <h3></h3>
     </div>
+
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/home.js"></script>
+    <script type="text/javascript" src="/static/js/map.js"></script>
   </body>
 </html>
