--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kalaxia</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/map.css" />
   </head>
   <body>
     <div id="map">
@@ -17,7 +18,7 @@
     </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="text/javascript" src="/static/js/home.js"></script>
+    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/map.js"></script>
   </body>
 </html>
