--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Kalaxia</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-  </head>
-  <body>
-    <script type="text/javascript" src="/config/config.js"></script>
-    <script type="module" src="/static/js/index.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Kalaxia</title>
+    </head>
+    <body>
+        <div id="app">
+            <top-menu v-if="currentPlayer" :faction="currentPlayer.faction"></top-menu>
+            <router-view id="wrapper"></router-view>
+            <bottom-menu :player="currentPlayer" :planet="currentPlanet"></bottom-menu>
+        </div>
+        
+        <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script> -->
+        <script type="text/javascript" src="/dist/js/app.js"></script>
+    </body>
 </html>
